# proof-tree-playground

./: .gitignore  SimFL.tex  deleteme.txt  pastebin  run.sh
frontend/: .env  package.json  webpack.config.js
frontend/src/: App.js  App.scss  CodeBox.js  PTNode.js  drag.js  haskell_ext_lang.js  hoohui_ext_lang.js  index.html  katex.js  main.css  main.js  network.js
frontend/src/components/: Katex.jsx
frontend/src/sass/: ProofTree.scss  bootstrap.scss  katex.scss  page.scss  variables.scss
server/: __new_cabal.project.freeze  cabal.project  input.hoohui  package.json  readme.md  server.cabal  todo.md
server/app/: Main.hs  Parser.hs  Service.hs  Syntax.hs  dump.hoohui
server/app/Alan/: Lang.hs
server/logic-cabal-usage-test/: CHANGELOG.md  logic-cabal-usage-test.cabal
server/logic-cabal-usage-test/app/: Main.hs
server/src/: Display.hs  Hoohui.hs  Infer.hs  Kumar.hs  Latex.hs  Operational.hs  Playground.hs  Semantic.hs
server/src/Control/Monad/: Backtrack.hs  Branch.hs  Effector.hs  ForkT.hs  ListT.hs  MonadStatePlus.hs  ProofT.hs
server/src/Control/Monad/Effector/: Branch.hs  State.hs
server/src/Hoohui/: Parser.hs  ProofMachine.hs  Prover.hs  Types.hs
server/src/Kumar/: Display.hs  Kumar.hs  Operational.hs  Semantic.hs
server/src/Parse/Kumar/: Kumar.lbnf  Parser.hs  Parser_First_Try.hs  Usage.hs
server/src/Parse/Kumar/test/: Test.cf
server/src/Parse/LBNF/: Parser.hs  lbnf.lbnf
server/src/Server/: Service.hs
