cabal-version:      2.4
name:               server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Iain Moncrief
maintainer:         moncrief@oregonstate.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Parse.Kumar.Parser
        Parse.Kumar.Usage

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        logic,
        scotty,
        parsec,
        text,
        aeson,
        wai-cors,
        wai,
        BNFC-meta,
        BNFC
    
    hs-source-dirs:   
        app,
        app/Alan,
        src,
        src/Parse,
        src/Parse/LBNF
        src/Parse/Kumar

    default-language: Haskell2010
